add nashorn dependency, upgrade xml-doclet